# memory_system

./: .gitignore  ARCHITECTURE.md  HANDOFF_NOTES.md  HANDOFF_S5_DELETE.md  MCP_BUILD_REPORT.md  README.md  REFACTOR_REPORT.md  S5_NOTES.md  pyproject.toml  review_ideas.md  suggest.md
eval/: HANDOFF_RECALL_EVAL.md  README.md  clusters.jsonl  manifest.json  queries.jsonl
eval/prompts/: gen_corpus_system.txt  gen_queries_system.txt
eval/raw/: corpus.jsonl  queries_raw.jsonl
history_notes/: ENGINEERING_HISTORY.md  S5_NOTES.md  S6_NOTES.md
history_notes/s65_ranking/: README.md  s65_plan.md  s65_step1_handoff.md  s65_step2_handoff.md  s65_step3_handoff.md
memory_system/: __init__.py  __main__.py  archive.py  chunk.py  cli.py  config.py  diagnose.py  editor.py  env.py  extract.py  fragments.py  index.py  locks.py  log.py  mcp_server.py  preprocess.py  preview_cache.py  processed.py  prompt_store.py  resume.py  segments_store.py  server.py  staging_store.py  transcript.py  ui_shape.py  views.py
memory_system/agent/: __init__.py  base.py  claude_cli.py  fake.py  openai_compat.py  provider_admin.py  registry.py
memory_system/db/: connection.py  migrate.py
memory_system/embedding/: __init__.py  base.py  dashscope.py  fake.py
memory_system/prompts/: chunk_system.txt  extract_system.txt  (+6 more)
scripts/: eval_gen.py  eval_ingest.py  eval_recall.py  verify_delete.py  verify_edit.py  verify_mcp.py  verify_provider_config.py  verify_ranking.py  verify_s1.py  verify_s2.py  verify_s3.py  verify_s4.py  verify_s5.py  verify_s6.py  verify_view_api.py  verify_web_api.py
(+51 files in other folders)
