[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memory_system"
version = "0.0.1"
description = "Claude Code 持久化记忆系统 — 三层结构(原文/情景/语义)、人驱动入库、惰性衰减检索"
requires-python = ">=3.11"
# 唯一的非标准库依赖:sqlite-vec(打包 vec0 加载式扩展)。embedding 走 urllib,不引 openai。
dependencies = ["sqlite-vec>=0.1.9"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
memory-system = "memory_system.cli:main"

[tool.setuptools.packages.find]
include = ["memory_system*"]

[tool.setuptools.package-data]
memory_system = ["web/*.html", "web/*.js"]
